Compositor: backdrop dragging interrupts with node mouse over (regression) #75535

Closed
opened 2020-04-08 20:24:45 +02:00 by Vyacheslav Kobozev · 9 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.59

Blender Version
Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-08 06:46, hash: a3c1605581
Worked: 2.82a

Short description of error
Any drag (move or corner scale) of backdrop ineterrupts, when mouse pointer go over any node.

2020-04-08_21-21-20.mp4

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.59 **Blender Version** Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-08 06:46, hash: `a3c1605581` Worked: 2.82a **Short description of error** Any drag (move or corner scale) of backdrop ineterrupts, when mouse pointer go over any node. [2020-04-08_21-21-20.mp4](https://archive.blender.org/developer/F8457107/2020-04-08_21-21-20.mp4)

Added subscriber: @Vyach

Added subscriber: @Vyach
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Confirmed, checking...

Confirmed, checking...
Member

Caused by 5929dd7129

Note we also assert here:

BLI_assert failed: /blender/source/blender/editors/gizmo_library/gizmo_types/cage2d_gizmo.c:153, gizmo_rect_pivot_from_scale_part(), at '0'

Think we should have the possibility for certain gizmos to circumvent the functionality introduced in 5929dd7129 (maybe something like a flag on gizmo WM_GIZMO_EVENT_IGNORE_REGION_CLIP?)

Caused by 5929dd7129 Note we also assert here: ``` BLI_assert failed: /blender/source/blender/editors/gizmo_library/gizmo_types/cage2d_gizmo.c:153, gizmo_rect_pivot_from_scale_part(), at '0' ``` Think we should have the possibility for certain gizmos to circumvent the functionality introduced in 5929dd7129 (maybe something like a flag on gizmo `WM_GIZMO_EVENT_IGNORE_REGION_CLIP`?)
Philipp Oeser self-assigned this 2020-04-09 13:10:29 +02:00

This issue was referenced by 65f674b570

This issue was referenced by 65f674b570fc5eb1b5011bf8ae5cc3e031026665
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Recent regression, should be addressed before the release.

Recent regression, should be addressed before the release.
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75535
No description provided.